# play-bracket-api

./: README.md  pyproject.toml
develop/develop/: asgi.py  settings.py  urls.py  wsgi.py
src/playbracket/: __version__.py  admin.py  apps.py  models.py
src/playbracket/api/v1/: serializers.py  urls.py  views.py
src/playbracket/migrations/: 0001_initial.py  0002_alter_event_date_alter_match_date.py  0003_event_place.py  0004_alter_sport_players.py
